Development Portal (2015-06-15 shi)
==============================
Removed year for donor activities and sector views
Fixed cursor hover state for title tables


Development Portal (2015-06-06 shi)
==============================
Fixed colour of other RGBA themes for SAVi
Icons now match themes


Development Portal (2015-06-05 shi)
==============================
Fixed colour of other RGBA themes for <result>
Graphs now math themes


Development Portal (2015-06-04 shi)
==============================
Changed email to support@iatistandard.org
Generator, SAVi, blogposts, translations email change


Development Portal (2015-05-22 shi)
==============================
Result description now visible in SAVi
Added white-space to descriptions for better legibility in SAVi
Added list numbers to Roles in SAVi
Fixed layout for Print-Friendly SAVi
Piechart grayscaled in Print-Friendly SAVi
Layout bug fix for onsite SAVi


Development Portal (2015-04-23 shi)
==============================
Bug fix SAVi transaction description for IE11


Development Portal (2015-03-20 shi)
==============================
Fixed peak hover color for Original theme


Development Portal (2015-03-19 shi)
==============================
Hide currency and year dropdown when viewing SAVi


Development Portal (2015-03-16 shi)
==============================
Minor css changes high / original dropdown
Removed inline style in year select dropdown


Development Portal (2015-03-13 shi)
==============================
Minor css changes high / original SAVi


Development Portal (2015-03-04 shi)
==============================
Minor css changes high / original


Development Portal (2015-03-03 shi)
==============================
Changed word wrap for donor names in money table
Added more descriptions for how data is calculated
Footer translations added
Added attribution link to all footers
Attribution link translations added


Development Portal (2015-02-27 shi)
==============================
Fixed footer wording

