@@ -38,6 +38,16 @@ iati-activity:after 	{content:""; padding:0; display:initial;}	/* Takes away con
 .center_wrap			{width:960px; margin:0 auto; text-align:center;}
 
 
+/*	Settings
+	============================================= */
+#settings				{padding:10px 40px 30px 40px; margin:0 auto; background-color:#fff; margin-bottom:40px;}
+span.settings_info		{min-width:135px; display:inline-block;}
+td.settings_toggle		{text-align:right; vertical-align:middle;}
+td.options				{padding-top:20px;}
+td.options:hover		{cursor:default;}
+td.options form			{display:inline-block;}
+
+
 /*	Breadcrumbs
 	============================================= */
 a.crumb					{display:inline-block; vertical-align:top; padding:0 10px; font-size:1.0em; color:#A8C5E5; line-height:1.1em;}
@@ -228,9 +238,6 @@ th.titles:last-child		{min-width:100px;}
 /*	Table for Header logo and Translations
 	============================================= */
 table.head					{width:100%; margin:0 auto; border-collapse:initial;}
-table.head td.options		{color:#FFF; text-align:right; vertical-align:top; font-size:0.9em;}
-table.head td.options form	{display:inline-block;}
-table.head td.options form.currency	{margin-right:10px;}
 table.head td				{cursor:default;}
 table.head img				{-webkit-filter:brightness(100%); filter:brightness(100%);}
 
