@@ -806,3 +806,15 @@ IATI出版社
 
 #table_publishers_explore_tip_text 
 点击浏览该出版商
+
+#settings_currency_text
+选择货币
+
+#settings_language_text
+选择语言
+
+#settings_year_text
+年度为公历
+
+#settings_themes_text
+主题
