@@ -804,3 +804,15 @@ IATI publishers
 
 #table_publishers_explore_tip_text
 Click to explore all this publisher's IATI data
+
+#settings_currency_text
+Choose currency
+
+#settings_language_text
+Choose language
+
+#settings_year_text
+Year starts on
+
+#settings_themes_text
+Themes
