@@ -806,3 +806,15 @@ l'IATI éditeurs
 
 #table_publishers_explore_tip_text 
 Cliquez ici pour découvrir cette Editeur
+
+#settings_currency_text
+Choisissez la monnaie
+
+#settings_language_text
+Choisissez la langue
+
+#settings_year_text
+Année commence
+
+#settings_themes_text
+Thèmes
