@@ -803,3 +803,15 @@ IATI प्रकाशक
 
 #table_publishers_explore_tip_text 
 इस प्रकाशक का पता लगाने के लिए क्लिक करें
+
+#settings_currency_text
+मुद्रा चुनिये
+
+#settings_language_text
+भाषा चुनें
+
+#settings_year_text
+साल पर शुरू होता है
+
+#settings_themes_text
+थीम्स
