@@ -806,3 +806,15 @@ IATI出版
 
 #table_publishers_explore_tip_text 
 この出版社を探索するクリック
+
+#settings_currency_text
+通貨を選択してください
+
+#settings_language_text
+言語を選択
+
+#settings_year_text
+年に開始します
+
+#settings_themes_text
+テーマ
