@@ -803,3 +803,15 @@ IATI editores
 
 #table_publishers_explore_tip_text 
 Haga clic para explorar esta Editorial
+
+#settings_currency_text
+Elegir moneda
+
+#settings_language_text
+Elige lengua
+
+#settings_year_text
+Año comienza el
+
+#settings_themes_text
+Temas
