@@ -7,7 +7,7 @@
 
 #view_main
 {view_head}
-<style>{css}</style>
+<style>.crumb_wrap{display:none;}{css}</style>
 {beige}
 {main_head}
 {main_max}
