@@ -1,3 +1,9 @@
+Development Portal (2015-06-18 shi)
+==============================
+Added settings dropdown buttons and link
+Added translations for settings text
+
+
 Development Portal (2015-06-15 shi)
 ==============================
 Removed year for donor activities and sector views
